--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div id="nav">
@@ -65,8 +66,8 @@
       <div id="left">
         <div id="left_01" class="left_box">
           <div class="left_min_a header_font01 box_border">
-            正在热映<a class="hover_font01 hoverall" href="">全部正在热映»</a
-            ><a class="hover_font02 hoverall" href="">即将上映»</a>
+            正在热映<a class="font01 hoverall" href="">全部正在热映»</a
+            ><a class="font02 hoverall" href="">即将上映»</a>
             <div id="pro01" class="pro"><span>null</span>/<span>null</span></div>
             <div id="arrowhead_1_01" class="arrowhead"><</div>
             <div id="arrowhead_1_02" class="arrowhead">></div>
@@ -74,29 +75,29 @@
         </div>
         <div id="left_02" class="left_box">
           <div id="hot_movie_title" class="header_font01 box_border">
-            最近热门电影<div class="hover_font03 hoverall">热门</div>
-            <div class="hover_font03 hoverall">最新</div>
-            <div class="hover_font03 hoverall">豆瓣高分</div>
-            <div class="hover_font03 hoverall">冷门佳片</div>
-            <div class="hover_font03 hoverall">华语</div>
-            <div class="hover_font03 hoverall">欧美</div>
-            <div class="hover_font03 hoverall">韩国</div>
-            <div class="hover_font03 hoverall">日本</div>
-            <div style="left:11.5rem" class="hover_font02 hoverall">更多»</div>
+            最近热门电影<div class="font03 hoverall">热门</div>
+            <div class="font03 hoverall">最新</div>
+            <div class="font03 hoverall">豆瓣高分</div>
+            <div class="font03 hoverall">冷门佳片</div>
+            <div class="font03 hoverall">华语</div>
+            <div class="font03 hoverall">欧美</div>
+            <div class="font03 hoverall">韩国</div>
+            <div class="font03 hoverall">日本</div>
+            <div style="left:11.5rem" class="font02 hoverall">更多»</div>
           </div>
         </div>
         <div id="left_03" class="left_box">
           <div id="hot_title" class="header_font01 box_border">
-            最近热门电视剧<div class="hover_font03 hoverall">热门</div>
-            <div class="hover_font03 hoverall">热门</div>
-            <div class="hover_font03 hoverall">国产剧</div>
-            <div class="hover_font03 hoverall">综艺</div>
-            <div class="hover_font03 hoverall">美剧</div>
-            <div class="hover_font03 hoverall">日剧</div>
-            <div class="hover_font03 hoverall">韩剧</div>
-            <div class="hover_font03 hoverall">日本动画</div>
-            <div class="hover_font03 hoverall">纪录片</div>
-            <div style="left:7.9rem" class="hover_font02 hoverall">更多»</div>
+            最近热门电视剧<div class="font03 hoverall">热门</div>
+            <div class="font03 hoverall">热门</div>
+            <div class="font03 hoverall">国产剧</div>
+            <div class="font03 hoverall">综艺</div>
+            <div class="font03 hoverall">美剧</div>
+            <div class="font03 hoverall">日剧</div>
+            <div class="font03 hoverall">韩剧</div>
+            <div class="font03 hoverall">日本动画</div>
+            <div class="font03 hoverall">纪录片</div>
+            <div style="left:7.9rem" class="font02 hoverall">更多»</div>
           </div>
         </div>
         <div id="left_04" class="left_box">
@@ -109,48 +110,48 @@
           </div>
         </div>
         <div id="left_05" class="left_box">
-          <div class="header_font01 box_border">最受欢迎的影评<div class="hover_font02 hoverall">更多热门影评»</div><div class="hover_font02 hoverall"">新片影评»</div></div>
+          <div class="header_font01 box_border">最受欢迎的影评<div class="font02 hoverall">更多热门影评»</div><div class="font02 hoverall"">新片影评»</div></div>
         </div>
       </div>
       <div id="right">
         <div id="right_01" class="right_box">
-          <a class="hover_font01 hoverall" href="">豆瓣电影评分八问</a>
+          <a class="font01 hoverall" href="">豆瓣电影评分八问</a>
         </div>
         <div id="right_02" class="right_box">
           <div style="margin-top: 1.5rem" class="header_font01 box_border">
-            一周口碑榜<a id="rb2_01" class="hover_font01 hoverall" href=""
+            一周口碑榜<a id="rb2_01" class="font01 hoverall" href=""
               >更多榜单»</a
             >
           </div>
           <div class="box_border rb2_02">
-            1<a href="" class="hover_font02 hoverall">null</a>
+            1<a href="" class="font02 hoverall">null</a>
           </div>
           <div class="box_border rb2_02">
-            2<a href="" class="hover_font02 hoverall">null</a>
+            2<a href="" class="font02 hoverall">null</a>
           </div>
           <div class="box_border rb2_02">
-            3<a href="" class="hover_font02 hoverall">null</a>
+            3<a href="" class="font02 hoverall">null</a>
           </div>
           <div class="box_border rb2_02">
-            4<a href="" class="hover_font02 hoverall">null</a>
+            4<a href="" class="font02 hoverall">null</a>
           </div>
           <div class="box_border rb2_02">
-            5<a href="" class="hover_font02 hoverall">null</a>
+            5<a href="" class="font02 hoverall">null</a>
           </div>
           <div class="box_border rb2_02">
-            6<a href="" class="hover_font02 hoverall">null</a>
+            6<a href="" class="font02 hoverall">null</a>
           </div>
           <div class="box_border rb2_02">
-            7<a href="" class="hover_font02 hoverall">null</a>
+            7<a href="" class="font02 hoverall">null</a>
           </div>
           <div class="box_border rb2_02">
-            8<a href="" class="hover_font02 hoverall">null</a>
+            8<a href="" class="font02 hoverall">null</a>
           </div>
           <div class="box_border rb2_02">
-            9<a href="" class="hover_font02 hoverall">null</a>
+            9<a href="" class="font02 hoverall">null</a>
           </div>
           <div class="box_border rb2_02">
-            10<a href="" class="hover_font02 hoverall">null</a>
+            10<a href="" class="font02 hoverall">null</a>
           </div>
         </div>
         <div id="right_03" class="right_box">
@@ -158,11 +159,11 @@
             热门片单
           </div>
           <div
-            class="hover_font02 box_border"
+            class="font02 box_border"
             style="justify-content: space-between"
           >
             <a href="" class="hoverall" style="text-decoration: none">null</a>
-            <span class="hover_font01" style="margin-right: 1rem">null</span>
+            <span class="font01" style="margin-right: 1rem">null</span>
           </div>
         </div>
         <div id="right_04" class="right_box">
@@ -195,19 +196,19 @@
             ><a href=""><img src="pictures/index/guangyin.png" alt="" /></a>
           </div>
           <div id="guanzhu_01">
-            <span class="hover_font02 hoverall">微博</span
-            ><span class="hover_font02 hoverall">微信</span
-            ><span class="hover_font02 hoverall">辩嘴</span
-            ><span style="margin-right: 0.5rem" class="hover_font02 hoverall"
+            <span class="font02 hoverall">微博</span
+            ><span class="font02 hoverall">微信</span
+            ><span class="font02 hoverall">辩嘴</span
+            ><span style="margin-right: 0.5rem" class="font02 hoverall"
               >光影club</span
             >
           </div>
           <div id="right_bottom">
             <img src="pictures/index/7.jpg" alt="" />
-            <a href="" class="hover_font01" style="font-size: 0.8rem"
+            <a href="" class="font01" style="font-size: 0.8rem"
               ><div>豆瓣2021年度电影榜单，开启全年佳片大赏</div></a
             >
-            <div class="hover_font03">豆瓣电影</div>
+            <div class="font03">豆瓣电影</div>
           </div>
         </div>
       </div>
