--- a/source/index.html
+++ b/source/index.html
@@ -1,76 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div id="nav">
-      <div id="nav_left">
-        <a href=""><span>豆瓣</span></a>
-        <a href=""><span>读书</span></a>
-        <a href=""><span>电影</span></a>
-        <a href=""><span>音乐</span></a>
-        <a href=""><span>同城</span></a>
-        <a href=""><span>小组</span></a>
-        <a href=""><span>阅读</span></a>
-        <a href=""><span>FM</span></a>
-        <a href=""><span>时间</span></a>
-        <a href=""><span>豆品</span></a>
-      </div>
-      <div id="nav_right">
-        <a href="" onmouseover="show(this)" onmouseout="show_out(this)"
-          ><span>下载豆瓣客户端</span></a
-        >
-        <a href=""><span>登录/注册</span></a>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <div id="nav">
+    <div id="nav_left">
+      <a href=""><span>豆瓣</span></a>
+      <a href=""><span>读书</span></a>
+      <a href=""><span>电影</span></a>
+      <a href=""><span>音乐</span></a>
+      <a href=""><span>同城</span></a>
+      <a href=""><span>小组</span></a>
+      <a href=""><span>阅读</span></a>
+      <a href=""><span>FM</span></a>
+      <a href=""><span>时间</span></a>
+      <a href=""><span>豆品</span></a>
+    </div>
+    <div id="nav_right">
+      <a href="" onmouseover="show(this)" onmouseout="show_out(this)"><span>下载豆瓣客户端</span></a>
+      <a href=""><span>登录/注册</span></a>
+    </div>
+  </div>
+  <div id="download" onmouseover="show(this)" onmouseout="show_out(this)">
+    <div id="tag">豆</div>
+    <div id="tag_L1">豆瓣</div>
+    <img id="tag_img" src="pictures/index/1.png" alt="" />
+    <a id="tag_download" href="">
+      <div>iPhone · Android</div>
+    </a>
+  </div>
+  <div id="nav_2">
+    <div id="search">
+      <a href="">
+        <div id="search_logo">豆瓣电影</div>
+      </a>
+      <div id="search_go">
+        <input id="search_go1" placeholder="搜索电影、电视剧、综艺，影人" type="text" />
+        <a href=""><img id="search_go2" src="pictures/index/2.png" alt="" /></a>
       </div>
     </div>
-    <div id="download" onmouseover="show(this)" onmouseout="show_out(this)">
-      <div id="tag">豆</div>
-      <div id="tag_L1">豆瓣</div>
-      <img id="tag_img" src="pictures/index/1.png" alt="" />
-      <a id="tag_download" href=""><div>iPhone · Android</div></a>
+    <div id="nav_3">
+      <a href="">影讯&购票</a>
+      <a href="">选电影</a>
+      <a href="">电视剧</a>
+      <a href="">排行榜</a>
+      <a href="">分类</a>
+      <a href="">影评</a>
+      <a href="">2021年度榜单</a>
+      <a href="">2021书影音报告</a>
     </div>
-    <div id="nav_2">
-      <div id="search">
-        <a href=""><div id="search_logo">豆瓣电影</div></a>
-        <div id="search_go">
-          <input
-            id="search_go1"
-            placeholder="搜索电影、电视剧、综艺，影人"
-            type="text"
-          />
-          <a href=""
-            ><img id="search_go2" src="pictures/index/2.png" alt=""
-          /></a>
-        </div>
-      </div>
-      <div id="nav_3">
-        <a href="">影讯&购票</a>
-        <a href="">选电影</a>
-        <a href="">电视剧</a>
-        <a href="">排行榜</a>
-        <a href="">分类</a>
-        <a href="">影评</a>
-        <a href="">2021年度榜单</a>
-        <a href="">2021书影音报告</a>
-      </div>
-      <a href=""><img id="pic_r" src="pictures/index/3.png" alt="" /></a>
-    </div>
-    <a href=""><img id="pic_c" src="pictures/index/4.png" alt="" /></a>
-    <div id="content">
-      <div id="left">
-        <div id="left_01" class="left_box">
-          <div class="left_min_a header_font01 box_border">
-            正在热映<a class="font01 hoverall" href="">全部正在热映»</a
-            ><a class="font02 hoverall" href="">即将上映»</a>
-            <div id="pro01" class="pro"><span>null</span>/<span>null</span></div>
-            <div id="arrowhead_1_01" class="arrowhead"><</div>
-            <div id="arrowhead_1_02" class="arrowhead">></div>
+    <a href=""><img id="pic_r" src="pictures/index/3.png" alt="" /></a>
+  </div>
+  <a href=""><img id="pic_c" src="pictures/index/4.png" alt="" /></a>
+  <div id="content">
+    <div id="left">
+      <div id="left_01" class="left_box">
+        <div class="left_min_a header_font01 box_border">
+          正在热映<a class="font01 hoverall" href="">全部正在热映»</a><a class="font02 hoverall" href="">即将上映»</a>
+          <div id="pro01" class="pro"><span>null</span>/<span>null</span></div>
+          <div id="arrowhead_1_01" class="arrowhead">
+            << /div>
+              <div id="arrowhead_1_02" class="arrowhead">></div>
           </div>
         </div>
         <div id="left_02" class="left_box">
@@ -103,124 +101,102 @@
         <div id="left_04" class="left_box">
           <div class="left_min_a header_font01 box_border">
             热门推荐
-            
+
             <div id="pro02" class="pro"><span>null</span>/<span>null</span></div>
-            <div id="arrowhead_1_01" class="arrowhead"><</div>
-            <div id="arrowhead_1_02" class="arrowhead">></div>
-          </div>
-        </div>
-        <div id="left_05" class="left_box">
-          <div class="header_font01 box_border">最受欢迎的影评<div class="font02 hoverall">更多热门影评»</div><div class="font02 hoverall"">新片影评»</div></div>
-        </div>
-      </div>
-      <div id="right">
-        <div id="right_01" class="right_box">
-          <a class="font01 hoverall" href="">豆瓣电影评分八问</a>
-        </div>
-        <div id="right_02" class="right_box">
-          <div style="margin-top: 1.5rem" class="header_font01 box_border">
-            一周口碑榜<a id="rb2_01" class="font01 hoverall" href=""
-              >更多榜单»</a
-            >
-          </div>
-          <div class="box_border rb2_02">
-            1<a href="" class="font02 hoverall">null</a>
-          </div>
-          <div class="box_border rb2_02">
-            2<a href="" class="font02 hoverall">null</a>
-          </div>
-          <div class="box_border rb2_02">
-            3<a href="" class="font02 hoverall">null</a>
-          </div>
-          <div class="box_border rb2_02">
-            4<a href="" class="font02 hoverall">null</a>
-          </div>
-          <div class="box_border rb2_02">
-            5<a href="" class="font02 hoverall">null</a>
-          </div>
-          <div class="box_border rb2_02">
-            6<a href="" class="font02 hoverall">null</a>
-          </div>
-          <div class="box_border rb2_02">
-            7<a href="" class="font02 hoverall">null</a>
-          </div>
-          <div class="box_border rb2_02">
-            8<a href="" class="font02 hoverall">null</a>
-          </div>
-          <div class="box_border rb2_02">
-            9<a href="" class="font02 hoverall">null</a>
-          </div>
-          <div class="box_border rb2_02">
-            10<a href="" class="font02 hoverall">null</a>
-          </div>
-        </div>
-        <div id="right_03" class="right_box">
-          <div class="header_font01 box_border" style="margin-top: 2rem">
-            热门片单
-          </div>
-          <div
-            class="font02 box_border"
-            style="justify-content: space-between"
-          >
-            <a href="" class="hoverall" style="text-decoration: none">null</a>
-            <span class="font01" style="margin-right: 1rem">null</span>
-          </div>
-        </div>
-        <div id="right_04" class="right_box">
-          <div class="box_border header_font01">合作联系</div>
-          <div id="email_all">
-            <div class="email_right">
-              <div>
-                电影合作邮箱:<img
-                  id="email01"
-                  src="pictures/index/5.png"
-                  alt=""
-                />
-              </div>
-              <div class="email_right">
-                电视剧合作邮箱:<img
-                  id="email02"
-                  src="pictures/index/6.png"
-                  alt=""
-                />
-              </div>
+            <div id="arrowhead_1_01" class="arrowhead">
+              << /div>
+                <div id="arrowhead_1_02" class="arrowhead">></div>
             </div>
           </div>
-        </div>
-        <div id="right_05" class="right_box">
-          <div class="box_border header_font01">关注我们</div>
-          <div id="guanzhu">
-            <a href=""><img src="pictures/index/weibo.png" alt="" /></a
-            ><a href=""><img src="pictures/index/weixin.png" alt="" /></a
-            ><a href=""><img src="pictures/index/banzhui.png" alt="" /></a
-            ><a href=""><img src="pictures/index/guangyin.png" alt="" /></a>
-          </div>
-          <div id="guanzhu_01">
-            <span class="font02 hoverall">微博</span
-            ><span class="font02 hoverall">微信</span
-            ><span class="font02 hoverall">辩嘴</span
-            ><span style="margin-right: 0.5rem" class="font02 hoverall"
-              >光影club</span
-            >
-          </div>
-          <div id="right_bottom">
-            <img src="pictures/index/7.jpg" alt="" />
-            <a href="" class="font01" style="font-size: 0.8rem"
-              ><div>豆瓣2021年度电影榜单，开启全年佳片大赏</div></a
-            >
-            <div class="font03">豆瓣电影</div>
-          </div>
+          <div id="left_05" class="left_box">
+            <div class="header_font01 box_border">最受欢迎的影评<div class="font02 hoverall">更多热门影评»</div>
+              <div class="font02 hoverall"">新片影评»</div></div>
         </div>
       </div>
-    </div>
-  </body>
-  <script>
-    let downl = document.querySelector("#download");
-    function show(x) {
-      downl.style.display = "block";
-    }
-    function show_out(x) {
-      downl.style.display = "none";
-    }
-  </script>
+      <div id=" right">
+                <div id="right_01" class="right_box">
+                  <a class="font01 hoverall" href="">豆瓣电影评分八问</a>
+                </div>
+                <div id="right_02" class="right_box">
+                  <div style="margin-top: 1.5rem" class="header_font01 box_border">
+                    一周口碑榜<a id="rb2_01" class="font01 hoverall" href="">更多榜单»</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    1<a href="" class="font02 hoverall">null</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    2<a href="" class="font02 hoverall">null</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    3<a href="" class="font02 hoverall">null</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    4<a href="" class="font02 hoverall">null</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    5<a href="" class="font02 hoverall">null</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    6<a href="" class="font02 hoverall">null</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    7<a href="" class="font02 hoverall">null</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    8<a href="" class="font02 hoverall">null</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    9<a href="" class="font02 hoverall">null</a>
+                  </div>
+                  <div class="box_border rb2_02">
+                    10<a href="" class="font02 hoverall">null</a>
+                  </div>
+                </div>
+                <div id="right_03" class="right_box">
+                  <div class="header_font01 box_border" style="margin-top: 2rem">
+                    热门片单
+                  </div>
+                  <div class="font02 box_border" style="justify-content: space-between">
+                    <a href="" class="hoverall" style="text-decoration: none">null</a>
+                    <span class="font01" style="margin-right: 1rem">null</span>
+                  </div>
+                </div>
+                <div id="right_04" class="right_box">
+                  <div class="box_border header_font01">合作联系</div>
+                  <div id="email_all">
+                    <div class="email_right">
+                      <div>
+                        电影合作邮箱:<img id="email01" src="pictures/index/5.png" alt="" />
+                      </div>
+                      <div class="email_right">
+                        电视剧合作邮箱:<img id="email02" src="pictures/index/6.png" alt="" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div id="right_05" class="right_box">
+                  <div class="box_border header_font01">关注我们</div>
+                  <div id="guanzhu">
+                    <a href=""><img src="pictures/index/weibo.png" alt="" /></a><a href=""><img
+                        src="pictures/index/weixin.png" alt="" /></a><a href=""><img src="pictures/index/banzhui.png"
+                        alt="" /></a><a href=""><img src="pictures/index/guangyin.png" alt="" /></a>
+                  </div>
+                  <div id="guanzhu_01">
+                    <span class="font02 hoverall">微博</span><span class="font02 hoverall">微信</span><span
+                      class="font02 hoverall">辩嘴</span><span style="margin-right: 0.5rem"
+                      class="font02 hoverall">光影club</span>
+                  </div>
+                  <div id="right_bottom">
+                    <img src="pictures/index/7.jpg" alt="" />
+                    <a href="" class="font01" style="font-size: 0.8rem">
+                      <div>豆瓣2021年度电影榜单，开启全年佳片大赏</div>
+                    </a>
+                    <div class="font03">豆瓣电影</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          
+</body>
+<script src="js/index.js"></script>
 </html>
