--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
           正在热映<a class="font01 hoverall" href="">全部正在热映»</a><a class="font02 hoverall" href="">即将上映»</a>
           <div id="pro01" class="pro"><span>null</span>/<span>null</span></div>
           <div id="arrowhead_1_01" class="arrowhead">
-            << /div>
+            <</div>
               <div id="arrowhead_1_02" class="arrowhead">></div>
           </div>
         </div>
@@ -103,9 +103,42 @@
             热门推荐
 
             <div id="pro02" class="pro"><span>null</span>/<span>null</span></div>
-            <div id="arrowhead_1_01" class="arrowhead">
-              << /div>
-                <div id="arrowhead_1_02" class="arrowhead">></div>
+            <div id="arrowhead_2_01" class="arrowhead">
+              <</div>
+                <div id="arrowhead_2_02" class="arrowhead">></div>
+            </div>
+            
+            <div id="recommend_box">
+              <div id="recommend">
+                <div class="rec_box rec_box_remove">
+                  <div class="rec_img"><img src="pictures/index/rec_01.jpg" alt=""></div>
+                  <div class="rec_right"><div class="rec_title"><a href="" class="rec_title_a">《怪奇物语》第四季中字预告</a></div><div class="rec_content font03">小11米莉·波比·布朗等主演悉数回归，明年夏天上线！</div></div>
+                </div>
+                <div class="rec_box rec_box_remove">
+                  <div class="rec_img"><img src="pictures/index/rec_02.jpg" alt=""></div>
+                  <div class="rec_right"><div class="rec_title"><a href="" class="rec_title_a">《怪奇物语》第四季中字预告</a></div><div class="rec_content font03">小11米莉·波比·布朗等主演悉数回归，明年夏天上线！</div></div>
+                </div>
+                <div class="rec_box rec_box_remove">
+                  <div class="rec_img"><img src="pictures/index/rec_03.jpg" alt=""></div>
+                  <div class="rec_right"><div class="rec_title"><a href="" class="rec_title_a">《怪奇物语》第四季中字预告</a></div><div class="rec_content font03">小11米莉·波比·布朗等主演悉数回归，明年夏天上线！</div></div>
+                </div>
+                <div class="rec_box rec_box_remove">
+                  <div class="rec_img"><img src="pictures/index/rec_04.jpg" alt=""></div>
+                  <div class="rec_right"><div class="rec_title"><a href="" class="rec_title_a">《怪奇物语》第四季中字预告</a></div><div class="rec_content font03">小11米莉·波比·布朗等主演悉数回归，明年夏天上线！</div></div>
+                </div>
+                <div class="rec_box rec_box_remove">
+                  <div class="rec_img"><img src="pictures/index/rec_05.jpg" alt=""></div>
+                  <div class="rec_right"><div class="rec_title"><a href="" class="rec_title_a">《怪奇物语》第四季中字预告</a></div><div class="rec_content font03">小11米莉·波比·布朗等主演悉数回归，明年夏天上线！</div></div>
+                </div>
+                <div class="rec_box rec_box_remove">
+                  <div class="rec_img"><img src="pictures/index/rec_06.jpg" alt=""></div>
+                  <div class="rec_right"><div class="rec_title"><a href="" class="rec_title_a">《怪奇物语》第四季中字预告</a></div><div class="rec_content font03">小11米莉·波比·布朗等主演悉数回归，明年夏天上线！</div></div>
+                </div>
+                <div class="rec_box rec_box_remove">
+                  <div class="rec_img"><img src="pictures/index/rec_08.jpg" alt=""></div>
+                  <div class="rec_right"><div class="rec_title"><a href="" class="rec_title_a">《怪奇物语》第四季中字预告</a></div><div class="rec_content font03">小11米莉·波比·布朗等主演悉数回归，明年夏天上线！</div></div>
+                </div>
+              </div>
             </div>
           </div>
           <div id="left_05" class="left_box">
@@ -192,11 +225,13 @@
                       <div>豆瓣2021年度电影榜单，开启全年佳片大赏</div>
                     </a>
                     <div class="font03">豆瓣电影</div>
+
                   </div>
                 </div>
               </div>
             </div>
-          
+
 </body>
 <script src="js/index.js"></script>
+
 </html>
