--- a/source/login.html
+++ b/source/login.html
@@ -5,10 +5,13 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta maximum-scale=1.0, user-scalable=0>
   <title>Document</title>
   <link rel="stylesheet" href="css/login.css" />
-</head>
+  <link rel="stylesheet" href="css/style.css">
 
+</head>
+<script src="./js/all.js"></script>
 <body>
   <div id="content">
     <div id="nav">
@@ -59,7 +62,8 @@
       </a><img id="left-p" src="pictures/login/ic_qr_mini_login.png" alt="IOS/Android扫码直接下载" />
     </div>
   </div>
+  
 </body>
-<script src="js/login.js" type="module"></script>
+<script src="./js/login.js" type="module"></script>
 
 </html>
