--- a/source/get_password.html
+++ b/source/get_password.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta maximum-scale=1.0, user-scalable=0>
     <title>Document</title>
     <link rel="stylesheet" href="./css/get_password.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./js/all.js">
 </head>
 <body>
         <div id="nav">
@@ -18,8 +20,6 @@
                 <span class="font03">请输入用户名</span>
                 <span>--></span>
                 <span class="font03">请回答密保问题</span>
-                <span>--></span>
-                <span class="font03">修改密码</span>
             </div>
             <form action="">
             <div id="find_user" class="find_box">
@@ -34,9 +34,10 @@
                 <input id="ans2" name="ans2" style="margin-left: 5rem;" class="input_style" type="text">
             </id>
             <div id="blank"></div>
-            <div id="next" class="button">下一步</div>
+            <div id="next" class="button">找回密码</div>
             </form>
         </div>
+        
 </body>
 
 </html>
